[package]
name = "omnipaxos-key-value-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omnipaxos_core = { git = "https://github.com/Sebbmeister/omnipaxos" }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.11.0", features = ["full"] }
structopt = "0.3"

kompact = "0.11.0"